--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <div class="parent">
-        <div>
-        </div>
                     <div class="child">chiled</div>
-
-    </div>
-</body>
+                    <div>chiled2</div>
+                    <div>chiled3</div>
+    </div>                
+<input type="text" name="" id="" placeholder="wellcome">
+<br>
+<hr>
+<div></div>
+</body> 
 </html>
